# internal/http/datatransfers/responses/responses.roles.go
@@ -2,6 +2,7 @@ package responses
 
 import (
 	V1Domains "github.com/anggitrestuu/go-rest-api/internal/business/domains/v1"
+	"github.com/anggitrestuu/go-rest-api/pkg/paginate"
 )
 
 type RoleResponse struct {
@@ -34,4 +35,20 @@ func FromRoleV1Domains(r []V1Domains.RoleDomain) RoleResponses {
 		responses = append(responses, FromRoleV1Domain(v))
 	}
 	return responses
+}
+
+func PaginationFromRolesV1Domains(u paginate.Pagination[V1Domains.RoleDomain]) paginate.Pagination[RoleResponse] {
+	var responses paginate.Pagination[RoleResponse]
+	for _, v := range u.Items {
+		responses.Items = append(responses.Items, FromRoleV1Domain(v))
+	}
+
+	responses.Filters = u.Filters
+	responses.Limit = u.Limit
+	responses.Page = u.Page
+	responses.TotalPages = u.TotalPages
+	responses.TotalItems = u.TotalItems
+
+	return responses
+
 }
