# internal/http/handlers/v1/handler.roles.go
@@ -7,6 +7,7 @@ import (
 	"github.com/anggitrestuu/go-rest-api/internal/http/datatransfers/requests"
 	"github.com/anggitrestuu/go-rest-api/internal/http/datatransfers/responses"
 	"github.com/anggitrestuu/go-rest-api/internal/utils"
+	"github.com/anggitrestuu/go-rest-api/pkg/paginate"
 	"github.com/anggitrestuu/go-rest-api/pkg/validators"
 	"github.com/gin-gonic/gin"
 )
@@ -130,14 +131,26 @@ func (h RoleHandler) Delete(ctx *gin.Context) {
 // @Tags role
 // @Accept json
 // @Produce json
-// @Success 200 {object} []responses.RoleResponse{}
+// @Param limit query string false "Limit" default(10)
+// @Param page query string false "Page" default(1)
+// @Param sort_by query string false "Sort By"
+// @Param filters query string false "Filters"
+// @Success 200 {object} map[string]interface{} "get all role success"
 // @Router /api/v1/roles [get]
 func (h RoleHandler) GetAll(ctx *gin.Context) {
-	outDomain, statusCode, err := h.useCase.GetAll(ctx.Request.Context())
+	var queryParams paginate.Params
+	if err := ctx.ShouldBindQuery(&queryParams); err != nil {
+		NewErrorResponse(ctx, http.StatusBadRequest, "Invalid query parameters")
+		return
+	}
+
+	outDomain, statusCode, err := h.useCase.GetAll(ctx.Request.Context(), queryParams)
 	if err != nil {
 		NewErrorResponse(ctx, statusCode, err.Error())
 		return
 	}
 
-	NewSuccessResponse(ctx, statusCode, "get all role success", outDomain)
+	roleResponsePagination := responses.TransformPagination(outDomain, responses.FromRoleV1Domain)
+
+	NewSuccessResponse(ctx, statusCode, "get all role success", roleResponsePagination)
 }
